--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,21 @@
 click==8.0.1
+colorama==0.4.4
 Flask==2.0.1
 gunicorn==20.1.0
-h5py==3.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 joblib==1.0.1
-Keras==2.4.3
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-Markdown==3.3.4
 MarkupSafe==2.0.1
-numpy==1.19.5
-oauthlib==3.1.1
-opencv-python==4.5.3.56
-opt-einsum==3.3.0
-os-win==5.4.0
-packaging==21.0
-protobuf==3.17.3
-requests==2.25.1
-requests-oauthlib==1.3.0
-rfc3986==1.5.0
-rsa==4.7.2
+numpy==1.20.3
 scikit-learn==0.24.2
 scipy==1.6.3
-six==1.15.0
 sklearn==0.0
+threadpoolctl==2.1.0
+Werkzeug==2.0.1
+h5py==3.1.0
 stevedore==3.3.0
 tensorboard==2.5.0
-termcolor==1.1.0
-threadpoolctl==2.1.0
-typing-extensions==3.7.4.3
-urllib3==1.26.6
-Werkzeug==2.0.1
-WMI==1.5.1
-wrapt==1.12.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
