--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,6 @@ numpy==1.20.3
 scikit-learn==0.24.2
 scipy==1.6.3
 sklearn==0.0
-threadpoolctl==2.1.0
 Werkzeug==2.0.1
 h5py==3.1.0
-stevedore==3.3.0
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
-tensorflow-estimator==2.5.0
+pip install tensorflow==1.0
