--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
-python==3.8
-click==8.0.1
-colorama==0.4.4
-Flask==2.0.1
-gunicorn==20.1.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
-joblib==1.0.1
-MarkupSafe==2.0.1
-numpy==1.20.3
-scikit-learn==0.24.2
-scipy==1.6.3
-sklearn==0.0
-Werkzeug==2.0.1
+absl-py==0.11.0
+astor==0.8.1
+cached-property==1.5.2
+click==7.1.2
+Flask==1.1.2
+gast==0.4.0
+google-pasta==0.2.0
+grpcio==1.35.0
+gunicorn==20.0.4
 h5py==3.1.0
-tensorflow==2.4
+importlib-metadata==3.4.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+Markdown==3.3.3
+MarkupSafe==1.1.1
+numpy==1.19.5
+Pillow==6.2.2
+protobuf==3.14.0
+six==1.15.0
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
+typing-extensions==3.7.4.3
+Werkzeug==1.0.1
+wrapt==1.12.1
+zipp==3.4.0
