--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,10 @@ astor==0.8.1
 cached-property==1.5.2
 click==7.1.2
 Flask==1.1.2
-grpcio==1.35.0
 gunicorn==20.0.4
 h5py==3.1.0
 importlib-metadata==3.4.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
-Markdown==3.3.3
-MarkupSafe==1.1.1
 numpy==1.19.5
-Pillow==6.2.2
-protobuf==3.14.0
-six==1.15.0
-tensorflow==2.4
-Werkzeug==1.0.1
+tensorflow-cpu
