--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,75 @@
-absl-py==0.11.0
-astor==0.8.1
-cached-property==1.5.2
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
+absl-py==0.13.0
+astunparse==1.6.3
+cachetools==4.2.2
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+debtcollector==2.2.0
+dnspython==1.16.0
+eventlet==0.31.1
+fasteners==0.16.3
+Flask==2.0.1
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.32.1
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+greenlet==1.1.0
+grpcio==1.34.1
+gunicorn==20.1.0
 h5py==3.1.0
-importlib-metadata==3.4.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
+idna==2.10
+iso8601==0.1.14
+itsdangerous==2.0.1
+Jinja2==3.0.1
+joblib==1.0.1
+Keras==2.4.3
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+lightgbm==3.2.1
+Markdown==3.3.4
+MarkupSafe==2.0.1
+msgpack==1.0.2
+netaddr==0.8.0
+netifaces==0.11.0
 numpy==1.19.5
+oauthlib==3.1.1
+opencv-python==4.5.3.56
+opt-einsum==3.3.0
+os-win==5.4.0
+oslo.concurrency==4.4.0
+oslo.config==8.7.0
+oslo.context==3.3.0
+oslo.i18n==5.0.1
+oslo.log==4.6.0
+oslo.serialization==4.1.0
+oslo.utils==4.9.2
+packaging==21.0
+pbr==5.6.0
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyMI==1.0.6
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+pywin32==301
+PyYAML==5.4.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rfc3986==1.5.0
+rsa==4.7.2
+scikit-learn==0.24.2
+scipy==1.6.3
+six==1.15.0
+sklearn==0.0
+stevedore==3.3.0
 tensorflow-cpu
+termcolor==1.1.0
+threadpoolctl==2.1.0
+typing-extensions==3.7.4.3
+urllib3==1.26.6
+Werkzeug==2.0.1
+WMI==1.5.1
+wrapt==1.12.1
