--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ scikit-learn==0.24.2
 scipy==1.6.3
 six==1.15.0
 sklearn==0.0
-tensorflow-cpu
+tensorflow
 urllib3==1.26.6
 Werkzeug==2.0.1
 WMI==1.5.1
